# LexicalAnalysis

./: .gdb_history  .nvimrc  .ycm_extra_conf.py  ;  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  compile.sh  compileAllSamples.sh  first-follow.md  grammer-formal.md  grammer.md  lexar.cpp  lexar.h  main  makefile  test.bc  testLLVMProgram.ll  testOut4.bc  testSource.txt
src/: ast.cpp  ast.h  codegen_ast.cpp  codgen_ast.cpp  lexar.cpp  lexar.h  main.cpp  parser.cpp  parser.h  print_ast.cpp
test/: tests.cpp
test/testPrograms/: testSource.txt
tests/: .gdb_history  makefile  testLLVMProgram.c  tests  tests.cpp
tests/testPrograms/: prog1  prog2  prog3  prog4  prog6.pas  samplesPassed.md  superSimple  superSimple.pas  superSimple.pas.bc
tests/testPrograms/samples/: expressions.p.bc  factorial.p  factorialCycle.p  factorization.p  factorization.p.bc  myOwnTest1.p  myOwnTest2.p
tests/testPrograms/samples/OutBitcode/: arrayMax.p.bc  arrayTest.p.bc  expressions2.p.bc  factorial.p.bc  factorialCycle.p.bc  factorialRec.p.bc  factorization.p.bc  fibonacci.p.bc  gcd.p.bc  indirectrecursion.p.bc  inputOutput.p.bc  isprime.p.bc  myOwnTest1.p.bc  myOwnTest2.p.bc
tests/testPrograms/samples/OutExecutables/: arrayMax.p  arrayTest.p  expressions  expressions2  expressions2.p  factorial  factorialCycle  factorialCycle.p  factorialRec  factorization  fibonacci.p  gcd  indirectrecursion  inputOutput.p  isprime  myOwnTest1  myOwnTest2
